--- a/MyProject/packages.config
+++ b/MyProject/packages.config
@@ -5,5 +5,6 @@
   <package id="MaterialDesignColors" version="1.1.3" targetFramework="net452" />
   <package id="MaterialDesignThemes" version="2.3.1.953" targetFramework="net452" />
   <package id="MaterialDesignThemes.MahApps" version="0.0.11" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net452" />
   <package id="SampleDependency" version="1.0.0" targetFramework="net452" />
 </packages>
